--- a/SimpleApp/app/build.gradle
+++ b/SimpleApp/app/build.gradle
@@ -31,6 +31,14 @@ android {
     }
 }
 
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:25.1.0'
+    }
+}
+
+// Assists in working with annotation processors for Android Studio.
+apply plugin: 'com.neenbedankt.android-apt'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -41,11 +49,20 @@ dependencies {
     compile 'com.android.support:cardview-v7:26.0.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
+    compile 'jp.wasabeef:picasso-transformations:2.1.2'
 
     compile project(':services')
     compile project (":data")
 
-    compile 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    apt "com.google.dagger:dagger-compiler:2.0.1"
+    compile 'com.android.support:multidex:1.0.1'
+    compile 'com.google.dagger:dagger:2.0.1'
+    compile 'javax.annotation:jsr250-api:1.0'
+
+    compile 'com.android.support:design:26.0.0'
+    compile 'com.dynamitechetan.flowinggradient:flowinggradient:1.1'
+    compile 'com.github.jd-alexander:LikeButton:0.2.2'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
     testCompile 'junit:junit:4.12'
 }
