--- a/SimpleApp/app/src/main/AndroidManifest.xml
+++ b/SimpleApp/app/src/main/AndroidManifest.xml
@@ -11,13 +11,16 @@
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
 
     <application
+        android:name=".InstagramApplication"
         android:allowBackup="true"
-        android:name=".SimpleApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.login.MainActivity">
+        </activity>
+        <activity android:name=".ui.feed.FeedActivity" />
+        <activity android:name=".ui.splash.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
